--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Vaccum Robot</name>
   <description>Simulation of the Vaccum Robot</description>
+  <dependencies>
+    <dependency>
+        <groupId>com.googlecode.lanterna</groupId>
+        <artifactId>lanterna</artifactId>
+        <version>3.0.0-beta1</version>
+    </dependency>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
